fix home screen layout, index page no longer has an extra scroll/overflow

--- a/agate-style.css
+++ b/agate-style.css
@@ -214,6 +214,10 @@ div.polaroid-text {
     padding-top:15px;
 }
 
+.center {
+    text-align:center;
+}
+
 .answer-button {
     display:inline-block;
     font-family:arial, sans-serif;
@@ -231,7 +235,24 @@ div.polaroid-text {
     box-shadow: 0 1px 2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
-.answer-button:hover {
+.home-screen-button {
+    display:inline-block;
+    font-family:arial, sans-serif;
+    border-radius:10px;
+    border:none;
+    background-color: #29a3a3;
+    color:white;
+    padding:10px 14px;
+    text-align:center;
+    text-decoration:none;
+    font-size:14px;
+    width:40%;
+    cursor:pointer;
+    margin-top: 6px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.answer-button:hover, .home-screen-button:hover {
     background-color:#2eb8b8;
     box-shadow: 0 2px 4px rgba(0,0,0,0.12), 0 2px 4px rgba(0,0,0,0.24); 
     transition:0.4s;    
